deck.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: deck
  spec:
    selector:
      app: prow
      component: deck
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1beta2
  kind: Deployment
  metadata:
    name: deck
    labels:
      app: prow
      component: deck
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: prow
        component: deck
    revisionHistoryLimit: 2
    template:
      metadata:
        labels:
          app: prow
          component: deck
      spec:
        serviceAccountName: deck
        containers:
        - name: deck
          image: registry.svc.ci.openshift.org/ci/deck:latest
          imagePullPolicy: IfNotPresent
          args:
          - --tide-url=http://tide/
          - --hook-url=http://hook:8888/plugin-help
          - --oauth-url=/github-login
          # defaults to --config-path=/etc/config/config
          ports:
            - name: http
              # not configurable today, deck serves in 8080 
              containerPort: 8080
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: oauth-config
            mountPath: /etc/github
            readOnly: true
          - name: cookie-secret
            mountPath: /etc/cookie
            readOnly: true
        volumes:
        - name: config
          configMap:
            name: config
        - name: oauth-config
          secret:
            secretName: github-oauth-config
        - name: cookie-secret
          secret:
            secretName: cookie
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: deck
- kind: Role
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    name: deck
  rules:
    - apiGroups:
        - "prow.k8s.io"
      resources:
        - prowjobs
      verbs:
        - create
        - list
- kind: RoleBinding
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    name: deck
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: deck
  subjects:
  - kind: ServiceAccount
    name: deck
