hook.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: hook
  spec:
    selector:
      app: hook
    ports:
    - port: 8888
    type: ClusterIP
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    namespace: default
    name: hook
    labels:
      app: hook
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: hook
      spec:
        serviceAccountName: "hook"
        terminationGracePeriodSeconds: 180
        containers:
        - name: hook
          image: gcr.io/k8s-prow/hook:v20190419-321e4866f
          imagePullPolicy: Always
          args:
          - --dry-run=false
          #- --slack-token-file=/etc/slack/token
          #- --github-endpoint=http://ghproxy
          #- --github-endpoint=https://api.github.com
          #- --config-path=/etc/config/config.yaml
          #- --job-config-path=/etc/job-config
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
          - name: hmac
            mountPath: /etc/webhook
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: plugins
            mountPath: /etc/plugins
            readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
        volumes:
        - name: hmac
          secret:
            secretName: hmac-token
        - name: oauth
          secret:
            secretName: oauth-token
        - name: config
          configMap:
            name: config
        - name: plugins
          configMap:
            name: plugins
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    namespace: default
    name: hook
- kind: Role
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    namespace: default
    name: hook
  rules:
    - apiGroups:
        - "prow.k8s.io"
      resources:
        - prowjobs
      verbs:
        - create
        - get
    - apiGroups:
        - ""
      resources:
        - configmaps
      verbs:
        - create
        - get
        - update
- kind: RoleBinding
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    namespace: default
    name: hook
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: hook
  subjects:
  - kind: ServiceAccount
    name: hook
